docs/1.0rc2/_sources/api/gammapy.astro.population.YusifovKucuk2004.rst.txt
YusifovKucuk2004
================

.. currentmodule:: gammapy.astro.population

.. autoclass:: YusifovKucuk2004
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~YusifovKucuk2004.a
      ~YusifovKucuk2004.amplitude
      ~YusifovKucuk2004.b
      ~YusifovKucuk2004.bbox_with_units
      ~YusifovKucuk2004.bounding_box
      ~YusifovKucuk2004.bounds
      ~YusifovKucuk2004.col_fit_deriv
      ~YusifovKucuk2004.cov_matrix
      ~YusifovKucuk2004.eqcons
      ~YusifovKucuk2004.evolved
      ~YusifovKucuk2004.fit_deriv
      ~YusifovKucuk2004.fittable
      ~YusifovKucuk2004.fixed
      ~YusifovKucuk2004.has_user_bounding_box
      ~YusifovKucuk2004.has_user_inverse
      ~YusifovKucuk2004.ineqcons
      ~YusifovKucuk2004.input_units
      ~YusifovKucuk2004.input_units_allow_dimensionless
      ~YusifovKucuk2004.input_units_equivalencies
      ~YusifovKucuk2004.input_units_strict
      ~YusifovKucuk2004.inputs
      ~YusifovKucuk2004.inverse
      ~YusifovKucuk2004.linear
      ~YusifovKucuk2004.meta
      ~YusifovKucuk2004.model_constraints
      ~YusifovKucuk2004.model_set_axis
      ~YusifovKucuk2004.n_inputs
      ~YusifovKucuk2004.n_outputs
      ~YusifovKucuk2004.n_submodels
      ~YusifovKucuk2004.name
      ~YusifovKucuk2004.outputs
      ~YusifovKucuk2004.param_names
      ~YusifovKucuk2004.param_sets
      ~YusifovKucuk2004.parameter_constraints
      ~YusifovKucuk2004.parameters
      ~YusifovKucuk2004.r_1
      ~YusifovKucuk2004.return_units
      ~YusifovKucuk2004.separable
      ~YusifovKucuk2004.standard_broadcasting
      ~YusifovKucuk2004.stds
      ~YusifovKucuk2004.sync_constraints
      ~YusifovKucuk2004.tied
      ~YusifovKucuk2004.uses_quantity

   .. rubric:: Methods Summary

   .. autosummary::

      ~YusifovKucuk2004.__call__
      ~YusifovKucuk2004.coerce_units
      ~YusifovKucuk2004.copy
      ~YusifovKucuk2004.deepcopy
      ~YusifovKucuk2004.evaluate
      ~YusifovKucuk2004.get_bounding_box
      ~YusifovKucuk2004.has_inverse
      ~YusifovKucuk2004.input_shape
      ~YusifovKucuk2004.output_units
      ~YusifovKucuk2004.prepare_inputs
      ~YusifovKucuk2004.prepare_outputs
      ~YusifovKucuk2004.rename
      ~YusifovKucuk2004.render
      ~YusifovKucuk2004.set_slice_args
      ~YusifovKucuk2004.strip_units_from_tree
      ~YusifovKucuk2004.sum_of_implicit_terms
      ~YusifovKucuk2004.with_units_from_data
      ~YusifovKucuk2004.without_units_for_data

   .. rubric:: Attributes Documentation

   .. autoattribute:: a
   .. autoattribute:: amplitude
   .. autoattribute:: b
   .. autoattribute:: bbox_with_units
   .. autoattribute:: bounding_box
   .. autoattribute:: bounds
   .. autoattribute:: col_fit_deriv
   .. autoattribute:: cov_matrix
   .. autoattribute:: eqcons
   .. autoattribute:: evolved
   .. autoattribute:: fit_deriv
   .. autoattribute:: fittable
   .. autoattribute:: fixed
   .. autoattribute:: has_user_bounding_box
   .. autoattribute:: has_user_inverse
   .. autoattribute:: ineqcons
   .. autoattribute:: input_units
   .. autoattribute:: input_units_allow_dimensionless
   .. autoattribute:: input_units_equivalencies
   .. autoattribute:: input_units_strict
   .. autoattribute:: inputs
   .. autoattribute:: inverse
   .. autoattribute:: linear
   .. autoattribute:: meta
   .. autoattribute:: model_constraints
   .. autoattribute:: model_set_axis
   .. autoattribute:: n_inputs
   .. autoattribute:: n_outputs
   .. autoattribute:: n_submodels
   .. autoattribute:: name
   .. autoattribute:: outputs
   .. autoattribute:: param_names
   .. autoattribute:: param_sets
   .. autoattribute:: parameter_constraints
   .. autoattribute:: parameters
   .. autoattribute:: r_1
   .. autoattribute:: return_units
   .. autoattribute:: separable
   .. autoattribute:: standard_broadcasting
   .. autoattribute:: stds
   .. autoattribute:: sync_constraints
   .. autoattribute:: tied
   .. autoattribute:: uses_quantity

   .. rubric:: Methods Documentation

   .. automethod:: __call__
   .. automethod:: coerce_units
   .. automethod:: copy
   .. automethod:: deepcopy
   .. automethod:: evaluate
   .. automethod:: get_bounding_box
   .. automethod:: has_inverse
   .. automethod:: input_shape
   .. automethod:: output_units
   .. automethod:: prepare_inputs
   .. automethod:: prepare_outputs
   .. automethod:: rename
   .. automethod:: render
   .. automethod:: set_slice_args
   .. automethod:: strip_units_from_tree
   .. automethod:: sum_of_implicit_terms
   .. automethod:: with_units_from_data
   .. automethod:: without_units_for_data
